# Music_Indexer

./: .gitignore  CLAUDE.md  CLUSTER_GRAPH_DIAGNOSTIC_GUIDE.md  CLUSTER_GRAPH_IMPLEMENTATION_SUMMARY.md  FIXES_SUMMARY.md  FRESH_AUDIT_RESULTS.md  IMPLEMENTATION_SUMMARY.md  PROGRESSIVE_LOADING_DESIGN.md  README.md  STARTUP_AUDIT.md  SoundVault Project Documentation.html  alpha_dex_gui.py  alphadex.html  audio_norm.py  cache_prewarmer.py  candidate_popup.py  chromaprint_utils.py  cluster_graph_3d.py  cluster_graph_panel.py  clustered_playlists.py  config.py  crash_logger.py  crash_report.txt  crash_test.txt  crash_watcher.py  demo_tile_proposals.py  diagnose_cluster_graph.py  diff_player.txt  diff_player_prev.txt  duplicate_bucketing_poc.py  duplicate_consolidation.py  duplicate_consolidation_executor.py  duplicate_scan_engine.py  fingerprint_cache.py  fingerprint_examples.py  fingerprint_generator.py  generate_library_table_contents.py  importer_core.py  indexer_control.py  last_path.txt  (+37 more)
.claude/: settings.json  settings.local.json
bindings/: CMakeLists.txt  llama_bindings.cpp  llama_c_api_for_bindings.h
bindings/pybind11/: CMakeLists.txt
bindings/pybind11/include/pybind11/: pybind11.h
controllers/: cluster_controller.py  cluster_view_controller.py  genre_list_controller.py  genre_playlist_controller.py  highlight_controller.py  import_controller.py  library_controller.py  library_index_controller.py  normalize_controller.py  playlist_controller.py  scan_progress_controller.py  tagfix_controller.py
docs/: AUDIT_REPORT.md  FEATURE_SPECIFICATION.md  IMPLEMENTATION_MASTER_GUIDE.md  IMPLEMENTATION_STATUS.md  INTEGRATION_COMPLETE.md  INTEGRATION_TESTING_GUIDE.md  INTERACTIVE_GRAPHS_PLAN.md  LIBRARY_SYNC_COMPLETE_SPEC.md  LIBRARY_SYNC_FEATURES.md  PHASES_1_2_3_IMPLEMENTATION.md  cluster_ui_followup_task.md  gui_inventory.md  hdbscan_task.md  library_sync_per_item_review.md  library_sync_per_item_review_testing.md  library_sync_redesign.md  project_documentation.html
gui/: __init__.py  audio_preview.py  compat.py  icons.py  main_window.py  (+2 more)
(+131 files in other folders)
